# openapi.yml
@@ -354,9 +354,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/JobApplication'
+                $ref: '#/components/schemas/JobApplication'
   /sessions:
     post:
       tags:
